app/Components/CalculatorSection/CardComponent/CardComponent.module.scss
.card {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  max-width: 400px;
  height: 200px;
  padding: 20px;
  background-color: #ffffff;
  border: 1px solid #e2e8f0; 
  border-radius: 12px;
  transition: box-shadow 0.2s ease, transform 0.2s ease;

  &:hover {
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
    transform: translateY(-2px);
    .calculatorLink {
      opacity: 1;
      visibility: visible;
      transform: translateY(0);
    }
  }
}
.container {
  display: flex;
  align-items: flex-start;
  gap: 16px;
}
.iconContainer {
  flex-shrink: 0;
  padding: 12px;
  background-color: #f8fafc; 
  border-radius: 12px;
  display: flex;
  align-items: center;
  justify-content: center;

  svg {
    width: 24px;
    height: 24px;
    stroke-width: 2;
    color: #475569;
  }
}

.title {
  display: block;
  font-weight: 200;
  font-size: 24px;
  color: #0f172a; 
  margin-bottom: 4px;
}

.subTitle {
  font-size: 0.875rem;
  color: #475569; 
  line-height: 1.4;
}

.calculatorLink {
  display: flex;
  align-items: center;
  font-size: 16px;
  font-weight: 400;

  color: #475569;
  text-decoration: underline;
  opacity: 0;
  visibility: hidden;
  transform: translateY(4px);
  transition: opacity 0.2s ease, transform 0.2s ease, visibility 0.2s ease;
  text-decoration: none;

  &:hover {
    color: #0369a1; 
  }
  div {
    display: flex; 
    align-items: center;
  }
}

.card:hover {
  box-shadow: 0 8px 20px #475569;
}

